tests/v2_0/invalid/undefined_fn.devops
version = "v2.0"

target "local" { address = "localhost:7700" }

// Calling a function that doesn't exist
node "test" {
    type    = process.exec
    targets = [local]
    cmd     = ["echo", undefined_function("arg")]
    cwd     = "/"
}
